--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,24 +6,41 @@ authors = ["Wandelbots GmbH"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-httpx = "0.27.2"
-requests = "2.32.3"
+python = "^3.10"
+httpx = "^0.27.2"
 wandelbots_api_client = "24.8.0rc6"
 websockets = ">=14.0.0"
-numpy = "^1.26"
-scipy = "^1.11"
+loguru = "^0.7.2"
+pydantic = "^2.9.2"
+numpy = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
 ipykernel = "^6.29.5"
 ruff = "^0.7.4"
 pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
 mypy = "^1.13.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+log_cli = false
+log_cli_level = "DEBUG"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+addopts = """
+    --doctest-modules
+    --junitxml=reports/pytest.xml
+    --import-mode=importlib"""
+junit_family = "xunit2"
+norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
+testpaths = """
+    wandelbots
+    tests
+"""
 
 [tool.mypy]
 python_version = "3.9"
