--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ websockets = ">=14.0.0"
 loguru = "^0.7.2"
 pydantic = "^2.9.2"
 numpy = "^2.1.3"
+python-decouple = "^3.8"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
