--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -26,9 +26,9 @@ jobs:
           poetry install
           mkdir envs
           touch envs/.env.tests
-          echo "WANDELAPI_BASE_URL=test.instance.mock.io" > envs/.env.tests
+          echo "NOVA_HOST=test.instance.mock.io" > envs/.env.tests
           echo "CELL_ID=cell" >> envs/.env.tests
-          echo "MOTION_GROUP=0@virtual-robot" >> envs/.env.tests
+          echo "MOTION_GROUP=virtual-robot" >> envs/.env.tests
           echo "TCP=Flange" >> envs/.env.tests
 
       - name: Check formatting with ruff
