feat(integration): added integration test CI

--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -7,8 +7,8 @@ on:
   pull_request:
     branches:
       - main
-      - develop
-      - feature/*
+      - feat/*
+      - fix/*
 
 jobs:
   test_integration:
