--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Install required system packages
         run: |
           sudo apt-get update
-          sudo apt-get install -y yq jq curl
+          sudo apt-get install -y curl
 
       - name: Install Poetry
         run: pip install poetry
