--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ loguru = "^0.7.2"
 pydantic = "^2.9.2"
 numpy = "^2.1.3"
 python-decouple = "^3.8"
+scipy = "^1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
