--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-httpx = "^0.27.2"
+httpx = "^0.28.0"
 wandelbots_api_client = "24.9.0rc3"
-websockets = ">=14.0.0"
+websockets = "^14.1.0"
 loguru = "^0.7.2"
 pydantic = "^2.10.3"
 numpy = "^2.1.3"
@@ -24,9 +24,8 @@ scipy = "^1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
-ipykernel = "^6.29.5"
-ruff = "^0.7.4"
-pytest = "^8.3.3"
+ruff = "^0.8.2"
+pytest = "^8.3.4"
 pytest-asyncio = "^0.24.0"
 mypy = "^1.13.0"
 
