--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ addopts = """
 junit_family = "xunit2"
 norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
 testpaths = """
-    wandelbots
+    nova
     tests
 """
 
@@ -111,9 +111,9 @@ env = "GIT_COMMIT_AUTHOR"
 default = "semantic-release <semantic-release>"
 
 [tool.semantic_release.commit_parser_options]
-allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
+allowed_tags = ["chore", "feat", "fix"]
 minor_tags = ["feat"]
-patch_tags = ["fix", "perf"]
+patch_tags = ["fix", "chore"]
 default_bump_level = 0
 
 [tool.semantic_release.remote]
