--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -1,4 +1,4 @@
-name: ci-dev
+name: Test, Lint and Format
 
 on:
   pull_request:
@@ -40,4 +40,4 @@ jobs:
       - name: Run tests
         run: |
           cp envs/.env.tests envs/test_.env.tests
-          # poetry run pytest -rs -v
+          PYTHONPATH=. poetry run pytest -rs -v
