--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,31 @@
 [tool.poetry]
-name = "wandelbots"
+name = "nova-py"
 version = "0.0.1"
 description = "Official Python SDK for the Wandelbots"
-authors = ["Wandelbots GmbH"]
+authors = [
+    "Wandelbots GmbH",
+    "Christoph Biering <christoph.biering@wandelbots.com>",
+    "Mahsum Demir <mahsum.demir@wandelbots.com>",
+    "Dirk Sonnemann <dirk.sonnemann@wandelbots.com>",
+    "Andreas Langenhagen <andreas.langenhagen@wandelbots.com>"
+]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-httpx = "^0.27.2"
-wandelbots_api_client = "24.8.0rc6"
-websockets = ">=14.0.0"
+httpx = "^0.28.0"
+wandelbots_api_client = "24.9.0rc3"
+websockets = "^14.1.0"
 loguru = "^0.7.2"
-pydantic = "^2.9.2"
+pydantic = "^2.10.3"
 numpy = "^2.1.3"
 python-decouple = "^3.8"
+scipy = "^1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
-ipykernel = "^6.29.5"
-ruff = "^0.7.4"
-pytest = "^8.3.3"
+ruff = "^0.8.2"
+pytest = "^8.3.4"
 pytest-asyncio = "^0.24.0"
 mypy = "^1.13.0"
 
@@ -39,12 +45,12 @@ addopts = """
 junit_family = "xunit2"
 norecursedirs = "develop .ipynb_checkpoints .venv .tox *.egg"
 testpaths = """
-    wandelbots
+    nova
     tests
 """
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.10"
 ignore_missing_imports = true
 warn_unreachable = true
 warn_unused_configs = true
@@ -105,9 +111,9 @@ env = "GIT_COMMIT_AUTHOR"
 default = "semantic-release <semantic-release>"
 
 [tool.semantic_release.commit_parser_options]
-allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
+allowed_tags = ["chore", "feat", "fix"]
 minor_tags = ["feat"]
-patch_tags = ["fix", "perf"]
+patch_tags = ["fix", "chore"]
 default_bump_level = 0
 
 [tool.semantic_release.remote]
