--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "novapy"
+name = "nova-python"
 version = "0.1.2"
 description = "Official Python SDK for the Wandelbots"
 authors = [
