--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "nova-python"
+name = "wandelbots-nova"
 version = "0.1.3"
 description = "Official Python SDK for the Wandelbots"
 authors = [
