--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ ruff = "^0.8.2"
 pytest = "^8.3.4"
 pytest-asyncio = "^0.24.0"
 mypy = "^1.13.0"
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
