feat: added mypy check to CI * updated API * added pose transform

--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -37,6 +37,9 @@ jobs:
       - name: Check ruff for linting
         run: poetry run ruff check .
 
+      - name: Typecheck
+        run: poetry run mypy
+
       - name: Run tests
         run: |
           cp envs/.env.tests envs/test_.env.tests
