--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,3 +18,10 @@ repos:
     hooks:
       - id: mypy
         args: [--no-warn-unused-ignores]
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.35.1
+    hooks:
+      - id: yamllint
+        entry: yamllint
+        language: python
+        types: [file, yaml]
