--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -1,4 +1,4 @@
-name: Test, Lint and Format
+name: Typecheck, Lint and Format
 
 on:
   pull_request:
@@ -24,12 +24,6 @@ jobs:
         run: |
           pip install poetry
           poetry install
-          mkdir envs
-          touch envs/.env.tests
-          echo "NOVA_API=test.instance.mock.io" > envs/.env.tests
-          echo "CELL_NAME=cell" >> envs/.env.tests
-          echo "MOTION_GROUP=virtual-robot" >> envs/.env.tests
-          echo "TCP=Flange" >> envs/.env.tests
 
       - name: Check formatting with ruff
         run: poetry run ruff format --check .
