--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -91,6 +91,8 @@ jobs:
           poetry install
           touch ./.env
           echo "NOVA_API=${{ env.PORTAL_STG_HOST }}" > ./.env
+          echo "NOVA_USERNAME=${{ secrets.NOVA_USERNAME }}" > ./.env
+          echo "NOVA_PASSWORD=${{ secrets.NOVA_PASSWORD }}" > ./.env
           echo "CELL_NAME=cell" >> ./.env
           cat ./.env
 
