--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -99,7 +99,7 @@ jobs:
       - name: Test examples
         run: |
           echo "Running test examples"
-          PYTHONPATH=. poetry run pytest -v examples/
+          PYTHONPATH=. poetry run python examples/01_basic.py
 
       # Always run cleanup, whether success or failure
       - name: Cleanup - delete instance
