--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -90,11 +90,11 @@ jobs:
           pip install poetry
           poetry install
           touch ./.env
-          echo "NOVA_API=${{ env.PORTAL_STG_HOST }}" > ./.env
-          echo "NOVA_USERNAME=${{ secrets.NOVA_USERNAME }}" > ./.env
-          echo "NOVA_PASSWORD=${{ secrets.NOVA_PASSWORD }}" > ./.env
-          echo "CELL_NAME=cell" >> ./.env
-          cat ./.env
+          echo "NOVA_API=${{ env.PORTAL_STG_HOST }}" > $GITHUB_ENV
+          echo "NOVA_USERNAME=${{ secrets.NOVA_USERNAME }}" > $GITHUB_ENV
+          echo "NOVA_PASSWORD=${{ secrets.NOVA_PASSWORD }}" > $GITHUB_ENV
+          echo "CELL_NAME=cell" >> $GITHUB_ENV
+          echo $GITHUB_ENV
 
       - name: Test examples
         run: |
