--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -94,9 +94,9 @@ jobs:
         run: |
           echo "Running test examples"
           touch ./.env
-          echo "NOVA_API=${{ env.PORTAL_STG_HOST }}" > ./.env
-          echo "NOVA_USERNAME=${{ secrets.NOVA_USERNAME }}" > ./.env
-          echo "NOVA_PASSWORD=${{ secrets.NOVA_PASSWORD }}" > ./.env
+          echo "NOVA_API=${{ env.PORTAL_STG_HOST }}" >> ./.env
+          echo "NOVA_USERNAME=${{ secrets.NOVA_USERNAME }}" >> ./.env
+          echo "NOVA_PASSWORD=${{ secrets.NOVA_PASSWORD }}" >> ./.env
           echo "CELL_NAME=cell" >> ./.env
           echo | cat ./.env
           PYTHONPATH=. poetry run python examples/01_basic.py
