--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -70,6 +70,7 @@ jobs:
       - name: Create and remove test cell
         run: |
           TEST_CELL_NAME="testcell$((RANDOM % 1001))"
+          TEST_CELL_NAME="cell"
           echo "Testcell name: ${TEST_CELL_NAME}"
 
           # Create cell
@@ -80,10 +81,10 @@ jobs:
             --data "{ \"name\": \"${TEST_CELL_NAME}\" }"
 
           # Remove cell to save resources
-          curl --request DELETE \
-            --url "${API_URL}/cells/${TEST_CELL_NAME}" \
-            --header "Accept: application/json" \
-            --header "Authorization: Bearer ${{ env.PORTAL_STG_ACCESS_TOKEN }}"
+          # curl --request DELETE \
+          #   --url "${API_URL}/cells/${TEST_CELL_NAME}" \
+          #   --header "Accept: application/json" \
+          #   --header "Authorization: Bearer ${{ env.PORTAL_STG_ACCESS_TOKEN }}"
 
       - name: Set up Python environment
         run: |
