--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -66,7 +66,7 @@ jobs:
 
           # Wait for the service-manager-backend to become available
           # TODO: Add or trust the self-signed certificate (long-term secure fix)
-          curl --insecure --location --fail --retry-all-errors --retry 10 --retry-max-time 20 \
+          curl --fail --retry-all-errors --retry 10 --retry-max-time 20 \
             --header "Authorization: Bearer ${{ env.PORTAL_STG_ACCESS_TOKEN }}" \
             "${API_URL}/cells"
 
