--- a/.github/workflows/ci-dev.yaml
+++ b/.github/workflows/ci-dev.yaml
@@ -36,5 +36,5 @@ jobs:
 
       - name: Run tests
         run: |
-          cp envs/.env.tests envs/test_.env.tests
+          # cp envs/.env.tests envs/test_.env.tests
           PYTHONPATH=. poetry run pytest -rs -v
