--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -8,9 +8,10 @@ on:
 jobs:
   integration-test:
     runs-on: ubuntu-latest
-    env:
-      API_VERSION: "v1"
-      API_URL: ""
+
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.head_ref }}
+      cancel-in-progress: true
 
     strategy:
       fail-fast: false
@@ -55,7 +56,7 @@ jobs:
           pip install poetry
           poetry install
 
-      - name: "Run example: ${{ matrix.example_file }}"
+      - name: "Run example: examples/${{ matrix.example_file }}"
         run: |
           touch ./.env
           echo "NOVA_API=https://${{ env.PORTAL_STG_HOST }}" >> ./.env
