--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ pydantic = "^2.10.3"
 numpy = "^2.1.3"
 python-decouple = "^3.8"
 scipy = "^1.14.1"
+aiostream = "^0.6.4"
+anyio = "^4.8.0"
+asyncstdlib = "^3.13.0"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
