--- a/.gitignore
+++ b/.gitignore
@@ -165,10 +165,14 @@ nova_rerun_bridge/rerun_app/models
 nova_rerun_bridge/rerun_app/nova_rerun_bridge
 nova_rerun_bridge/rerun_app/pyproject.toml
 nova_rerun_bridge/rerun_app/poetry.lock
-nova_rerun_bridge/nova_rerun_bridge_app/README.md
+nova_rerun_bridge/rerun_app/README.md
+nova_rerun_bridge/rerun_app/kubeconfig
+nova_rerun_bridge/rerun_app/nova
 
 nova_rerun_bridge/nova_rerun_bridge_app/models
 nova_rerun_bridge/nova_rerun_bridge_app/nova_rerun_bridge
 nova_rerun_bridge/nova_rerun_bridge_app/pyproject.toml
 nova_rerun_bridge/nova_rerun_bridge_app/poetry.lock
 nova_rerun_bridge/nova_rerun_bridge_app/README.md
+nova_rerun_bridge/nova_rerun_bridge_app/kubeconfig
+nova_rerun_bridge/nova_rerun_bridge_app/nova
