fix: build jobs for nova apps

--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Create and populate rerun_app directory
         run: |
-          DIRS_TO_COPY=("models" "nova_rerun_bridge" "nova")
+          DIRS_TO_COPY=("nova_rerun_bridge" "nova")
           FILES_TO_COPY=("pyproject.toml" "poetry.lock" "README.md")
 
           for dir in "${DIRS_TO_COPY[@]}"; do
