add step to download robot models

--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -23,6 +23,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install GLTF Transform CLI
+        run: npm install -g @gltf-transform/cli
+
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+
+      - name: Download Robot Models
+        run: |
+          poetry install
+          poetry run download-models
+
       - name: Create and populate rerun_app directory
         run: |
           DIRS_TO_COPY=("nova_rerun_bridge" "nova")
