--- a/.github/workflows/push_nova_rerun_bridge_image.yaml
+++ b/.github/workflows/push_nova_rerun_bridge_image.yaml
@@ -7,6 +7,9 @@ on:
       - completed
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 env:
   REGISTRY: wandelbots.azurecr.io
