--- a/.github/workflows/run-examples.yaml
+++ b/.github/workflows/run-examples.yaml
@@ -5,13 +5,13 @@ on:
     branches:
       - main
 
+concurrency:
+  group: run-examples-workflow
+  cancel-in-progress: false
+
 jobs:
   run-examples:
     runs-on: ubuntu-latest
-
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.head_ref }}
-      cancel-in-progress: true
 
     strategy:
       fail-fast: false
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Create NOVA instance and check connection
         env:
@@ -43,7 +43,7 @@ jobs:
           # Optional
           PROJECT_VERSION: "1.0.0"
           GITHUB_RUN_ID: ${{ github.run_id }}
-          INSECURE_CURL: "true"   # If you need to skip SSL verification
+          INSECURE_CURL: "true" # If you need to skip SSL verification
         run: |
           if ! source ./scripts/create_nova_instance.sh; then
             echo "Failed to create NOVA instance."
