feat: add optional rerun bridge (#45)

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ report/**
 reports
 .DS_Store
 **/.idea/*
-.vscode/**
-!.vscode/launch.json
 packages/wbigeometry.protobuf/wbigeometry/protobuf/pb
 
 # Byte-compiled / optimized / DLL files
@@ -155,3 +153,26 @@ dmypy.json
 .engine
 services/helm/charts
 Chart.lock
+
+
+# test files
+*PointCloud-cropped-0.ply
+nova_rerun_bridge/minimal_example/models
+
+models
+
+nova_rerun_bridge/rerun_app/models
+nova_rerun_bridge/rerun_app/nova_rerun_bridge
+nova_rerun_bridge/rerun_app/pyproject.toml
+nova_rerun_bridge/rerun_app/poetry.lock
+nova_rerun_bridge/rerun_app/README.md
+nova_rerun_bridge/rerun_app/kubeconfig
+nova_rerun_bridge/rerun_app/nova
+
+nova_rerun_bridge/nova_rerun_bridge_app/models
+nova_rerun_bridge/nova_rerun_bridge_app/nova_rerun_bridge
+nova_rerun_bridge/nova_rerun_bridge_app/pyproject.toml
+nova_rerun_bridge/nova_rerun_bridge_app/poetry.lock
+nova_rerun_bridge/nova_rerun_bridge_app/README.md
+nova_rerun_bridge/nova_rerun_bridge_app/kubeconfig
+nova_rerun_bridge/nova_rerun_bridge_app/nova
