--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pytest = "^8.3.4"
 pytest-asyncio = "^0.24.0"
 mypy = "^1.13.0"
 pre-commit = "^4.0.1"
+icecream = "^2.1.4"
 
 [build-system]
 requires = ["poetry-core"]
