--- a/.github/workflows/push_rerun_image.yaml
+++ b/.github/workflows/push_rerun_image.yaml
@@ -98,6 +98,7 @@ jobs:
           GH_TOKEN: ${{ secrets.CATALOG_TOKEN }}
           IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
           VERSION: "${{ steps.version.outputs.version }}"
+          CATALOG_ENTRY_NAME: "rerun"
         run: |
           curl -L \
             -X POST \
