--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+LOG_LEVEL=INFO
 # The endpoint where the API is reachable from the container serving the Application.
 NOVA_API="http://api-gateway.wandelbots.svc.cluster.local:8080"
 # The name of the cell to be used for the Application.
