--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,9 @@ NOVA_PASSWORD="my_password"
 
 # Using token-based authentication (comment out username/password lines)
 # NOVA_ACCESS_TOKEN="eyJhbGciOi..."
+
+
+# We use the default logger from loguru which can be customized with below env variables
+# For more options check loguru._defaults.py file
+# LOGURU_LEVEL="DEBUG" # Default is DEBUG
+# LOGURU_FORMAT="<green>{time:YYYY-MM-DD HH:mm:ss.SSS}</green> | <level>{level: <8}</level> | <cyan>{name}</cyan>:<cyan>{function}</cyan>:<cyan>{line}</cyan> - <level>{message}</level>",
