--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,6 @@ wandelbots_api_client = "25.1.0"
 websockets = "^14.1.0"
 loguru = "^0.7.2"
 pydantic = "^2.10.3"
-numpy = "^2.1.3"
 python-decouple = "^3.8"
 scipy = "^1.14.1"
 aiostream = "^0.6.4"
@@ -37,6 +36,7 @@ rerun-sdk = { version = "=0.22.0", optional = true }
 requests = { version = ">=2.32.3", optional = true }
 APScheduler = { version = ">=3.11.0", optional = true }
 trimesh = { version = ">=4.5.3", optional = true }
+robometrics = { git = "https://github.com/fishbotics/robometrics.git", extras = ["evaluator"], optional = true }
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
@@ -52,6 +52,13 @@ nova-rerun-bridge = [
     "requests",
     "APScheduler",
     "trimesh"
+]
+benchmark = [
+    "rerun-sdk",
+    "requests",
+    "APScheduler",
+    "trimesh",
+    "robometrics"
 ]
 
 [build-system]
