--- a/.github/workflows/run-examples.yaml
+++ b/.github/workflows/run-examples.yaml
@@ -43,6 +43,7 @@ jobs:
           # Optional
           PROJECT_VERSION: "1.0.0"
           GITHUB_RUN_ID: ${{ github.run_id }}
+          INSECURE_CURL: "true"
         run: |
           if ! source ./scripts/create_nova_instance.sh; then
             echo "Failed to create NOVA instance."
