use default python logger instead of loguru, add configuration parameters into .env

--- a/.env.template
+++ b/.env.template
@@ -13,7 +13,8 @@ NOVA_PASSWORD="my_password"
 # NOVA_ACCESS_TOKEN="eyJhbGciOi..."
 
 
-# We use the default logger from loguru which can be customized with below env variables
-# For more options check loguru._defaults.py file
-# LOGURU_LEVEL="DEBUG" # Default is DEBUG
-# LOGURU_FORMAT="<green>{time:YYYY-MM-DD HH:mm:ss.SSS}</green> | <level>{level: <8}</level> | <cyan>{name}</cyan>:<cyan>{function}</cyan>:<cyan>{line}</cyan> - <level>{message}</level>",
+# Configure logger
+# LOG_LEVEL="INFO"
+# LOG_FORMAT="%(asctime)s [%(levelname)s] %(name)s: %(message)s",
+# LOGGER_NAME="wandelbots-nova"
+# LOG_DATETIME_FORMAT="%Y-%m-%d %H:%M:%S"
